--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Simple app for students to calculate how much they need to get to pass a course"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
